--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Suppachai Homepage</title>
 </head>
 <body>
-    <h1>Hello html</h1>
-    <a href="about.html">click</a>
+    <h1>Hello, I am Suppachai</h1>
+    <a href="/index.html">Home</a> | <a href="/about.html">About</a>
 </body>
 </html>
