--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Suppachai Homepage</title>
 </head>
 <body>
-    <h1>Hello, I am Suppachai</h1>
-    <a href="/index.html">Home</a> | <a href="/about.html">About</a>
+    <center>
+        <img src="/img/dol.jpg" alt="profile image" height="200" width="200">
+        <h1>Hello, I am Suppachai</h1>
+        <!-- <a href="/index.html">Home</a> | <a href="/about.html">About</a> -->
+    </center>
 </body>
 </html>
