--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suppachai Homepage</title>
 </head>
-<body>
+
+<body bgcolor="#FBF1D5">
     <center>
-        <img src="/img/dol.jpg" alt="profile image" height="200" width="200">
-        <h1>Hello, I am Suppachai</h1>
-        <!-- <a href="/index.html">Home</a> | <a href="/about.html">About</a> -->
+        <h1 style="color: tomato;">Hello !</h1><br>
+        <img src="/img/dol.jpg" height="300" width="300"><br><br>
+        <div style="background-color:#FFE2AE;padding: 10px;">
+            <h2 style="color: tomato;">My name is Suppachai</h2>
+            <p><h2 style="color: tomato;">My nickname is Dol</h2></p>
+            <br>
+            <u><h1 style="color: tomato">My Hobby</h1></u>
+            <p><h2 style="color: tomato;">play game</h2>
+                <h2 style="color: tomato;">listen music</h2>
+                <h2 style="color: tomato;">watching anime</h2>
+            </p>
+            <br>
+            <audio controls autoplay>
+                <source src="/music/Morning Coffee.mp3" type="audio/mpeg">
+              </audio>
+        </div>
     </center>
+
 </body>
+
 </html>
