--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
                 <h2 style="color: tomato;">watching anime</h2>
             </p>
             <br>
+            <u><h1 style="color: tomato;">My Favorite</h1></u>
+            <p><h2 style="color: tomato;">Game</h2></p><br>
+            <img src="/img/apex.jpg" alt="apex legends" height="200" width="300"><br>
             <audio controls autoplay>
-                <source src="/music/Morning Coffee.ogg" type="audio/ogg">
                 <source src="/music/Morning Coffee.mp3" type="audio/mpeg">
-              </audio><br><br>
-              <iframe src="https://www.youtube.com/watch?v=YGOX7Tj0dMY" height="300" width="600" title="Iframe Example"></iframe>
+              </audio>
         </div>
     </center>
 
