--- a/index.html
+++ b/index.html
@@ -11,20 +11,36 @@
 <body bgcolor="#FBF1D5">
     <center>
         <h1 style="color: tomato;">Hello !</h1><br>
-        <img src="/img/dol.jpg" height="300" width="300"><br><br>
+        <img src="/img/dol.jpg" height="300" width="300" border="3">
+        <br>
+        <br>
         <div style="background-color:#FFE2AE;padding: 10px;">
             <h2 style="color: tomato;">My name is Suppachai</h2>
             <p><h2 style="color: tomato;">My nickname is Dol</h2></p>
             <br>
-            <u><h1 style="color: tomato">My Hobby</h1></u>
-            <p><h2 style="color: tomato;">play game</h2>
+            <hr size=10 color="#F9A280"> <br>
+                <u style="color: red;"><h1 style="color: tomato">My Hobby</h1></u>
+                <p><h2 style="color: tomato;">play game</h2>
                 <h2 style="color: tomato;">listen music</h2>
-                <h2 style="color: tomato;">watching anime</h2>
-            </p>
+                <h2 style="color: tomato;">watching movies</h2>
+                </p>  
             <br>
-            <u><h1 style="color: tomato;">My Favorite</h1></u>
-            <p><h2 style="color: tomato;">Game</h2></p><br>
-            <img src="/img/apex.jpg" alt="apex legends" height="200" width="300"><br>
+            <hr size=10 color="#F9A280">
+            <br>
+            <u style="color: red;"><h1 style="color: tomato;">My Favorite</h1></u>
+            <br>
+            
+            <h2 style="color: tomato;">Game</h2>
+            <img src="/img/apex.jpg" height="300" width="400" border="3">
+            <p style="color: tomato;">Apex Legends</p>
+            <br>
+
+            <h2 style="color: tomato;">Movie</h2>
+            <img src="/img/catch me if you can.jpg" height="300" width="400" border="3">
+            <p style="color: tomato;">Catch me if you can</p>
+
+            <br>
+            <br>
             <audio controls autoplay>
                 <source src="/music/Morning Coffee.mp3" type="audio/mpeg">
               </audio>
