--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
 </head>
 
 <body bgcolor="#FBF1D5">
-    <center>
-        <h1 style="color: tomato;">Hello !</h1><br>
-        <img src="/img/dol.jpg" height="300" width="300" border="3">
-        <br>
-        <br>
-        <div style="background-color:#FFE2AE;padding: 10px;">
-            <h2 style="color: tomato;">My name is Suppachai</h2>
-            <p><h2 style="color: tomato;">My nickname is Dol</h2></p>
+        <h1 style="color: tomato;" align="center">About Me</h1><br>
+        <img src="/img/dol.jpg" height="300" width="300" border="3" hspace="100" align="middle">
+        <font style="color: tomato;" size="5"><b>My name is Suppachai nickname is Dol</b></font>
             <br>
-            <hr size=10 color="#F9A280"> <br>
-                <u style="color: red;"><h1 style="color: tomato">My Hobby</h1></u>
-                <p><h2 style="color: tomato;">play game</h2>
-                <h2 style="color: tomato;">listen music</h2>
-                <h2 style="color: tomato;">watching movies</h2>
-                </p>  
+            <br>
+        <div style="background-color:#FFE2AE;padding: 10px;">
+                <hr size=10 color="#F9A280"> <br>
+                <u style="color: red;" align="center"><h1 style="color: tomato">My Hobby</h1></u>
+                <center><p><h2 style="color: tomato;">play game</h2>
+                    <h2 style="color: tomato;">listen music</h2>
+                    <h2 style="color: tomato;">watching movies</h2>
+                    </p>  
+                </center>
+                
             <br>
             <hr size=10 color="#F9A280">
             <br>
-            <u style="color: red;"><h1 style="color: tomato;">My Favorite</h1></u>
+            <u style="color: red;" align="center"><h1 style="color: tomato;">My Favorite</h1></u>
             <br>
-            
+            <center>
             <h2 style="color: tomato;">Game</h2>
             <img src="/img/apex.jpg" height="300" width="400" border="3">
             <p style="color: tomato;">Apex Legends</p>
@@ -44,9 +43,8 @@
             <audio controls autoplay>
                 <source src="/music/Morning Coffee.mp3" type="audio/mpeg">
               </audio>
+            </center>
         </div>
-    </center>
-
 </body>
 
 </html>
