--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body bgcolor="#FBF1D5">
+        <header style="background-color: #FFE2AE; padding: 20px; text-align: center;">
+            <font style="color: tomato;" size="10"><b>Welcome to my homepage</b></font>
+        </header>
         <h1 style="color: tomato;" align="center">About Me</h1><br>
         <img src="/img/dol.jpg" height="300" width="300" border="3" hspace="100" align="middle">
         <font style="color: tomato;" size="5"><b>My name is Suppachai nickname is Dol</b></font>
@@ -22,7 +25,6 @@
                     <h2 style="color: tomato;">watching movies</h2>
                     </p>  
                 </center>
-                
             <br>
             <hr size=10 color="#F9A280">
             <br>
@@ -33,11 +35,9 @@
             <img src="/img/apex.jpg" height="300" width="400" border="3">
             <p style="color: tomato;">Apex Legends</p>
             <br>
-
             <h2 style="color: tomato;">Movie</h2>
             <img src="/img/catch me if you can.jpg" height="300" width="400" border="3">
             <p style="color: tomato;">Catch me if you can</p>
-
             <br>
             <br>
             <audio controls autoplay>
@@ -46,5 +46,4 @@
             </center>
         </div>
 </body>
-
 </html>
